syntax = "proto3";

package ideserver;

option go_package = ".";

service RunnerService {
  rpc MakeContainer (MakeContainerRequest) returns (MakeContainerResponse) {}
  rpc GetContainerDns (ConnectContainerRequest) returns (ConnectContainerResponse) {}
  rpc DeleteContainer (deleteContainerRequest) returns (deleteContainerResponse){}
 // rpc updateContainerConfig() returns(){}
}
//for now on cpp and reactjs projects are awailable
message MakeContainerRequest {
  string techStack = 1;
  string yamlFileCode = 2;
  string hostname = 3;
}

message MakeContainerResponse {
 string msg = 2;
  string err = 3;
}

message ConnectContainerRequest {
  string hostname = 1;
}
message ConnectContainerResponse {
  string podDns = 1;
}
message deleteContainerRequest {
string hostname = 1;
}
message deleteContainerResponse {
 string msg = 1;
  string err = 2; 
}